<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.SocioDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/back"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btFoto"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@+id/img"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/nome" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >

                        <EditText
                            android:id="@+id/edCpf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:singleLine="true"
                            android:hint="@string/cpf" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/situacao"
                            android:theme="@style/info" />

                        <RadioGroup
                            android:id="@+id/sit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@+id/first"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/ativo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ativo" />

                            <RadioButton
                                android:id="@+id/inativo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginLeft="8dp"
                                android:text="@string/inativo" />
                        </RadioGroup>


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <jrizani.jrspinner.JRSpinner
                        android:id="@+id/spMensalidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mensalidade"
                        android:textColor="@color/colorPrimary"
                        app:jrs_title="Mensalidade"
                        app:backgroundTint="@color/colorPrimary"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <jrizani.jrspinner.JRSpinner
                        android:id="@+id/spCurso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/curso"
                        android:textColor="@color/colorPrimary"
                        app:jrs_title="@string/curso"
                        app:backgroundTint="@color/colorPrimary"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">

                    <jrizani.jrspinner.JRSpinner
                        android:id="@+id/spInstituicao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/instituicao"
                        android:textColor="@color/colorPrimary"
                        app:jrs_title="@string/instituicao"
                        app:backgroundTint="@color/colorPrimary"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/endere_o" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlVencimento"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edValidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:focusable="false"
                        android:hint="@string/validade" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >

                        <EditText
                            android:id="@+id/edFone1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="phone"
                            android:hint="@string/fone"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"                        
                        >

                        <EditText
                            android:id="@+id/edFone2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="phone"
                            android:hint="@string/fone2"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>